# TensorCompiler

./: CMakeLists.txt  README.md  conanfile.py  tensor-compiler.cpp
.github/workflows/: cmake-single-platform.yml
include/TensorCompiler/Converter/: GraphBuilder.hpp  MLIRBuilder.hpp
include/TensorCompiler/Dialect/: NNDialect.hpp  NNDialect.td  NNOps.td
include/TensorCompiler/Driver/: MLIRBuilder.hpp
include/TensorCompiler/Frontend/: ONNXDumper.hpp  ONNXModel.hpp  ONNXParser.hpp  ONNXVisitor.hpp
include/TensorCompiler/Graph/: Exporter.hpp  IR.hpp
lib/: CMakeLists.txt
lib/Converter/: CMakeLists.txt  GraphBuilder.cpp  MLIRBuilder.cpp
lib/Dialect/: CMakeLists.txt  NNDialect.cpp
lib/Driver/: CMakeLists.txt  MLIRBuilder.cpp
lib/Frontend/: CMakeLists.txt  ONNXDumper.cpp
lib/Graph/: CMakeLists.txt  Exporter.cpp  IR.cpp
lib/IR/: CMakeLists.txt
tests/data/: add_mul.onnx  conv_relu.onnx  gemm.onnx  matmul_relu.onnx  test_0.onnx  test_1.onnx  transpose_matmul.onnx
tests/unit/: CMakeLists.txt  graph.cpp  onnx2graph.cpp  onnx2mlir.cpp
